<resources>
    <string name="app_name" translatable="false">Dicoding Story</string>
    <string name="app_logo">App Logo</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_title">Welcome to Dicoding Story!</string>
    <string name="welcome_body">Share your stories and experiences while learning at Dicoding!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="password_error">Password must be more than 8 characters</string>
    <string name="email_error">Incorrect email format</string>
    <string name="register_question">Haven\'t signed up?</string>
    <string name="register_here">Register here</string>
    <string name="register_success">Register success</string>
    <string name="login_question">Already signed up?</string>
    <string name="login_here">Login here</string>
    <string name="login_success">Login success</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="settings_button">Settings button</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="story_image">Story Image</string>
    <string name="add_story_button">Add story button</string>
    <string name="add_image">Add Image</string>
    <string name="radio_choose_local">Local Image</string>
    <string name="radio_choose_url">Image URL</string>
    <string name="choose_image">Choose Image</string>
    <string name="image_url">Image URL</string>
    <string name="description">Description</string>
    <string name="selected_image_preview">Selected image preview</string>
    <string name="add_story">Add Story</string>
    <string name="take_photo">Take Photo</string>
    <string name="capture_image">Capture image</string>
    <string name="switch_camera_side">Switch camera side</string>
    <string name="appwidget_text" translatable="false">Dicoding Story Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Add widget to preview Dicoding Story application on your homescreen</string>
    <string name="empty_text">NO DATA</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="display_current_location">Display Current Location</string>
    <string name="retry">Retry</string>
</resources>