<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    tools:context=".ui.landing.landing.LandingFragment">

    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_study2"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/tvWelcomeTitle"
        style="@style/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWelcome" />

    <TextView
        android:id="@+id/tvWelcomeBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/welcome_body" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBody"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLogin"
            style="@style/button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/login"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btRegister"
            style="@style/button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/register"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>